# CUDA-net

./: CMakeLists.txt  cmake_install.cmake  kernel.cu  kernel.h  main.cpp  main.h
src/: kernel.cu
src/headers/: kernel.h  structs.cuh  vectorcu.cuh
